<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/blue2"
    tools:context="com.boisestate.srisarguru.mydog.PictureSaveActivity">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:layout_above="@+id/fileNametextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bone"
        android:textColor="#ff0000"
        android:text="@string/savebutton"
        android:id="@+id/savebutton"
        android:layout_alignTop="@+id/cancelbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bone"
        android:textColor="#ff0000"
        android:text="@string/cancelbutton"
        android:id="@+id/cancelbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/fileName"
        android:id="@+id/fileNametextView"

        android:layout_above="@+id/cancelbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/editText"
        android:layout_above="@+id/savebutton"
        android:layout_alignRight="@+id/savebutton"
        android:layout_alignEnd="@+id/savebutton" />
</RelativeLayout>
